--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,5 @@
 - title: About
   url: /about.html
 
-- title: Source
-  url: https://github.com/patdryburgh/hitchens
-
-- title: Designer
-  url: http://patdryburgh.com
+- title: Resume
+  url: /assets/docs/pramod_rapeti_cv.pdf
